--- a/style.css
+++ b/style.css
@@ -5,3 +5,25 @@
 .p-5{
     background-color: aqua;
 }
+.baner{
+    background-image: url("./IMG/baner.jpg");
+    padding: 25%;
+    background-attachment: fixed;
+    background-position: top center;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+
+.baner::after{
+    content: "";
+    position: absolute;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: -1;
+}
+
